# noise

./: settings.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
noise/: build.gradle.kts  proguard-rules.pro
noise/src/main/cpp/: CMakeLists.txt
sample/: build.gradle.kts
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/paramsen/noise/sample/view/: InfoView.kt  MainActivity.kt  SimpleSurface.kt  ViewExtensions.kt
sample/src/main/res/layout/: view_info.xml
